--- a/index.html
+++ b/index.html
@@ -284,7 +284,13 @@
                                 <li><a class="dropdown-item" href="#"></a></li>
                             </ul>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="carrito.html">Carrito</a>
+                        </li>
+                        
                     </ul>
+
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Buscar</button>
@@ -342,7 +348,7 @@
             </div>
         </div>
         <br><br><br><br><br><br>
-        
+
         <!--Productos-->
         <section class="container">
             <h2>Productos Destacados</h2>
